修改 Gradle 和基础库

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:id="@+id/main_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/main_color"
             app:tabIndicatorColor="@color/base_color_white"
             app:tabSelectedTextColor="@color/top_bar_text_selected_color"
             app:tabTextColor="@color/top_bar_text_unselected_color"/>
