--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimary"
+        android:background="@color/main_color"
         android:elevation="@dimen/toolbar_elevation">
 
         <LinearLayout
@@ -44,7 +44,7 @@
         android:id="@+id/search_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/main_color"
         android:elevation="@dimen/toolbar_elevation"
         app:tabIndicatorColor="@color/base_color_white"
         app:tabSelectedTextColor="@color/top_bar_text_selected_color"
