--- a/commonlib/src/main/res/layout/common_line_horizontal.xml
+++ b/commonlib/src/main/res/layout/common_line_horizontal.xml
@@ -2,4 +2,4 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="@dimen/base_lines_1px"
-      android:background="@color/grey"/>
+      android:background="@color/feather_grey"/>
