--- a/commonlib/src/main/res/layout/common_line_vertical.xml
+++ b/commonlib/src/main/res/layout/common_line_vertical.xml
@@ -2,4 +2,4 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="@dimen/base_lines_1px"
       android:layout_height="match_parent"
-      android:background="@color/dark_grey"/>
+      android:background="@color/feather_grey"/>
