--- a/commonlib/src/main/res/layout/layout_classic_footer.xml
+++ b/commonlib/src/main/res/layout/layout_classic_footer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.kyletung.commonlib.load.ClassicLoadMoreFooterView
+<com.zhanwang.commonlib.load.ClassicLoadMoreFooterView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -15,7 +15,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="@string/load_more_swipe"
-            android:textColor="?attr/colorPrimary"/>
+            android:textColor="?attr/colorAccent"/>
 
         <ProgressBar
             android:id="@+id/progressbar"
@@ -41,4 +41,4 @@
 
     </RelativeLayout>
 
-</com.kyletung.commonlib.load.ClassicLoadMoreFooterView>
+</com.zhanwang.commonlib.load.ClassicLoadMoreFooterView>
