--- a/commonlib/src/main/res/values/colors.xml
+++ b/commonlib/src/main/res/values/colors.xml
@@ -7,16 +7,16 @@
     <color name="main_color_dark">#3f8dbc</color>
 
     <!-- 基础背景颜色 -->
-    <color name="main_background">#FAFAFA</color>
+    <color name="main_background">#F5F5F5</color>
 
     <!-- BaseColors -->
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="red">#dc3030</color>
     <color name="grey">#999999</color>
+    <color name="feather_grey">#C9C9C9</color>
     <color name="light_grey">#eeeeee</color>
     <color name="dark_grey">#333333</color>
-    <color name="transparency">#00000000</color>
     <color name="lines">#e1e1e1</color>
 
 </resources>
