--- a/commonlib/src/main/res/values/dimens.xml
+++ b/commonlib/src/main/res/values/dimens.xml
@@ -6,9 +6,11 @@
     <dimen name="base_dimen_4dp">4dp</dimen>
     <dimen name="base_dimen_6dp">6dp</dimen>
     <dimen name="base_dimen_8dp">8dp</dimen>
+    <dimen name="base_dimen_10dp">10dp</dimen>
     <dimen name="base_dimen_12dp">12dp</dimen>
     <dimen name="base_dimen_14dp">14dp</dimen>
     <dimen name="base_dimen_16dp">16dp</dimen>
+    <dimen name="base_dimen_18dp">18dp</dimen>
     <dimen name="base_dimen_20dp">20dp</dimen>
     <dimen name="base_dimen_24dp">24dp</dimen>
     <dimen name="base_dimen_32dp">32dp</dimen>
