--- a/commonlib/src/main/res/layout/layout_classic_footer.xml
+++ b/commonlib/src/main/res/layout/layout_classic_footer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhanwang.commonlib.load.ClassicLoadMoreFooterView
+<com.kyletung.commonlib.load.ClassicLoadMoreFooterView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -41,4 +41,4 @@
 
     </RelativeLayout>
 
-</com.zhanwang.commonlib.load.ClassicLoadMoreFooterView>
+</com.kyletung.commonlib.load.ClassicLoadMoreFooterView>
