--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -28,18 +28,13 @@
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"/>
 
-                <android.support.v7.widget.CardView
+                <ImageView
+                    android:id="@+id/book_image"
                     android:layout_width="160dp"
                     android:layout_height="240dp"
-                    android:layout_centerInParent="true">
-
-                    <ImageView
-                        android:id="@+id/book_cover"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"/>
-
-                </android.support.v7.widget.CardView>
+                    android:layout_centerInParent="true"
+                    android:scaleType="centerCrop"
+                    android:transitionName="book_cover"/>
 
             </RelativeLayout>
 
@@ -56,6 +51,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/book_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
