--- a/commonlib/src/main/res/layout/common_load_layout.xml
+++ b/commonlib/src/main/res/layout/common_load_layout.xml
@@ -14,7 +14,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/swipe_target"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
     </android.support.v7.widget.RecyclerView>
 
     <include
@@ -22,9 +23,9 @@
         layout="@layout/layout_classic_footer"/>
 
     <com.kyletung.commonlib.view.EmptyView
-        android:background="@color/main_background"
         android:id="@+id/swipe_empty_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/main_background"/>
 
 </com.kyletung.commonlib.load.SwipeToLoadLayout>
