--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<com.kyletung.commonlib.view.android.BaseFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <include layout="@layout/common_toolbar"/>
+        <com.kyletung.simplebookmovie.view.TabViewPager
+            android:id="@+id/main_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/main_tab"
+        <com.ashokvarma.bottomnavigation.BottomNavigationBar
+            android:id="@+id/bottom_navigation_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_collapseMode="parallax"
-            android:background="@color/main_color"
-            app:tabIndicatorColor="@color/base_color_white"
-            app:tabSelectedTextColor="@color/top_bar_text_selected_color"
-            app:tabTextColor="@color/top_bar_text_unselected_color"/>
+            android:layout_gravity="bottom"/>
 
-    </android.support.design.widget.AppBarLayout>
+    </LinearLayout>
 
-    <com.kyletung.simplebookmovie.view.TabViewPager
-        android:id="@+id/main_content"
+    <com.kyletung.simplebookmovie.view.CoverView
+        android:id="@+id/cover_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+    </com.kyletung.simplebookmovie.view.CoverView>
 
-    <com.ashokvarma.bottomnavigation.BottomNavigationBar
-        android:layout_gravity="bottom"
-        android:id="@+id/bottom_navigation_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-</android.support.design.widget.CoordinatorLayout>
+</com.kyletung.commonlib.view.android.BaseFrameLayout>
