--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/main_color"
+        android:elevation="@dimen/base_dimen_2dp"
         app:layout_collapseMode="parallax"
         app:tabIndicatorColor="@color/base_color_white"
         app:tabSelectedTextColor="@color/top_bar_text_selected_color"
