--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.kyletung.simplebookmovie.view.SwitchLayout
-    android:id="@+id/switch_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/switch_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -37,67 +37,9 @@
     </com.kyletung.commonlib.view.android.BaseFrameLayout>
 
     <FrameLayout
+        android:id="@+id/search_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/feather_grey">
-
-        <!-- 第一层是搜索结果层 -->
-
-        <com.kyletung.commonlib.view.android.BaseFrameLayout
-            android:id="@+id/layout_result"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/search_result"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </android.support.v7.widget.RecyclerView>
-
-        </com.kyletung.commonlib.view.android.BaseFrameLayout>
-
-        <!-- 第二层是最近的搜索列表 -->
-
-        <FrameLayout
-            android:id="@+id/layout_recent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/base_dimen_16dp">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/search_recent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </android.support.v7.widget.RecyclerView>
-
-        </FrameLayout>
-
-        <!-- 第三层是顶部的搜索框 -->
-
-        <FrameLayout
-            android:id="@+id/layout_search"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/base_dimen_16dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/search_bar_background"
-                android:elevation="@dimen/base_dimen_2dp"
-                android:gravity="center_vertical">
-
-                <EditText
-                    android:id="@+id/search_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
-        </FrameLayout>
-
-    </FrameLayout>
+        android:background="@color/feather_grey"/>
 
 </com.kyletung.simplebookmovie.view.SwitchLayout>
