--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/feather_grey">
@@ -49,24 +50,48 @@
         <LinearLayout
             android:id="@+id/search_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/search_bar_height"
             android:background="@drawable/search_bar_background"
             android:elevation="@dimen/base_dimen_2dp"
             android:gravity="center_vertical">
 
+            <com.kyletung.simplebookmovie.view.spinner.NiceSpinner
+                android:id="@+id/search_type"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:entries="@array/search_type"
+                app:textTint="@color/dark_grey">
+            </com.kyletung.simplebookmovie.view.spinner.NiceSpinner>
+
+            <!--<TextView-->
+            <!--android:id="@+id/search_type"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@drawable/common_click_white"-->
+            <!--android:gravity="center"-->
+            <!--android:paddingLeft="@dimen/base_dimen_8dp"-->
+            <!--android:paddingRight="@dimen/base_dimen_8dp"-->
+            <!--android:text="书籍 ▼"-->
+            <!--android:textSize="@dimen/base_text_16sp"/>-->
+
             <EditText
                 android:id="@+id/search_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@null"/>
+
+            <ImageView
+                android:id="@+id/search_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/base_dimen_12dp"
+                android:paddingTop="@dimen/base_dimen_12dp"
+                android:src="@drawable/search_icon"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
     </FrameLayout>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Hello World"/>
 
 </FrameLayout>
