详情页面添加系统浏览器打开方式

--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -7,4 +7,9 @@
         android:title="@string/detail_menu_web"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/detail_menu_explorer"
+        android:title="@string/detail_menu_explorer"
+        app:showAsAction="never"/>
+
 </menu>
