拦截详情页面的回退事件

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,4 +42,9 @@
         android:layout_height="match_parent"
         android:background="@color/feather_grey"/>
 
+    <ImageView
+        android:layout_width="@dimen/base_dimen_48dp"
+        android:layout_height="@dimen/base_dimen_48dp"
+        android:src="@mipmap/launcher_icon"/>
+
 </com.kyletung.simplebookmovie.view.SwitchLayout>
